generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                         Int            @id @default(autoincrement())
  email                      String         @unique @db.VarChar(255)
  password                   String?        @db.VarChar(255)
  status                     UserStatus     @default(PENDING_VERIFICATION)
  firstName                  String         @db.VarChar(100)
  lastName                   String         @db.VarChar(100)
  phone                      String         @db.VarChar(20)
  userType                   UserType       @default(student)
  university                 String?        @db.VarChar(255)
  studyLevel                 String?        @db.VarChar(100)
  bio                        String?
  avatar                     String?        @db.Text
  budget                     Decimal?       @db.Decimal(10, 2)
  cinNumber                  String?        @db.VarChar(12)
  cinData                    String?
  cinVerified                Boolean        @default(false)
  cinRectoImagePath          String?        @db.Text
  cinVersoImagePath          String?        @db.Text
  cinVerificationConfidence  Float?
  cinVerificationErrors      String?
  cinVerifiedAt              DateTime?
  cinVerificationRequestedAt DateTime?
  isVerified                 Boolean        @default(false)
  verificationCode           String?        @db.VarChar(10)
  verificationExpires        DateTime?
  clerkId                    String?        @unique @db.VarChar(255)
  accountActivationDeadline  DateTime?
  lastLogin                  DateTime?
  createdAt                  DateTime       @default(now())
  updatedAt                  DateTime       @updatedAt
  announcements              Announcement[]
  appointmentsAsOwner        Appointment[]  @relation("OwnerAppointments")
  appointmentsAsStudent      Appointment[]  @relation("StudentAppointments")
  conversationsAsUser1       Conversation[] @relation("User1Conversations")
  conversationsAsUser2       Conversation[] @relation("User2Conversations")
  receivedMessages           Message[]      @relation("ReceivedMessages")
  sentMessages               Message[]      @relation("SentMessages")
  properties                 Property[]
  verificationCodes          VerificationCode[]

  @@map("users")
}

model PendingRegistration {
  id                  Int       @id @default(autoincrement())
  email               String    @unique @db.VarChar(255)
  passwordHash        String    @db.VarChar(255)
  firstName           String    @db.VarChar(100)
  lastName            String    @db.VarChar(100)
  phone               String    @db.VarChar(20)
  userType            UserType  @default(student)
  university          String?   @db.VarChar(255)
  studyLevel          String?   @db.VarChar(100)
  budget              Decimal?  @db.Decimal(10, 2)
  avatar              String?   @db.Text
  verificationCode    String    @db.VarChar(10)
  verificationExpires DateTime
  attempts            Int       @default(0)
  createdAt           DateTime  @default(now())
  updatedAt           DateTime  @updatedAt

  @@map("pending_registrations")
}

model VerificationCode {
  id        Int       @id @default(autoincrement())
  userId    Int
  code      String    @db.VarChar(10)
  type      String    @db.VarChar(50) // EMAIL_VERIFICATION, PASSWORD_RESET, etc.
  expiresAt DateTime
  used      Boolean   @default(false)
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, code])
  @@index([code, type, used])
}

model Property {
  id             Int           @id @default(autoincrement())
  title          String        @db.VarChar(255)
  description    String
  address        String
  district       String        @db.VarChar(100)
  price          Decimal       @db.Decimal(10, 2)
  deposit        Decimal       @db.Decimal(10, 2)
  availableRooms Int
  totalRooms     Int
  propertyType   PropertyType
  amenities      String?
  images         String?
  ownerId        Int
  isAvailable    Boolean       @default(true)
  latitude       Decimal?      @db.Decimal(10, 8)
  longitude      Decimal?      @db.Decimal(11, 8)
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
  appointments   Appointment[]
  owner          User          @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  @@map("properties")
}

model Announcement {
  id        Int      @id @default(autoincrement())
  authorId  Int
  content   String
  images    String?
  contact   String?  @db.VarChar(255)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  author    User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@map("announcements")
}

model ContactMessage {
  id        Int      @id @default(autoincrement())
  name      String   @db.VarChar(255)
  email     String   @db.VarChar(255)
  subject   String   @db.VarChar(255)
  message   String
  createdAt DateTime @default(now())

  @@map("contact_messages")
}

model Conversation {
  id          Int       @id @default(autoincrement())
  user1Id     Int
  user2Id     Int
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  unreadCount Int       @default(0)
  user1       User      @relation("User1Conversations", fields: [user1Id], references: [id], onDelete: Cascade)
  user2       User      @relation("User2Conversations", fields: [user2Id], references: [id], onDelete: Cascade)
  messages    Message[]

  @@map("conversations")
}

model Message {
  id             Int          @id @default(autoincrement())
  conversationId Int
  senderId       Int
  receiverId     Int
  content        String
  isRead         Boolean      @default(false)
  createdAt      DateTime     @default(now())
  conversation   Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  receiver       User         @relation("ReceivedMessages", fields: [receiverId], references: [id], onDelete: Cascade)
  sender         User         @relation("SentMessages", fields: [senderId], references: [id], onDelete: Cascade)

  @@map("messages")
}

model Appointment {
  id                 Int               @id @default(autoincrement())
  propertyId         Int
  studentId          Int
  ownerId            Int
  appointmentDate    DateTime
  status             AppointmentStatus @default(pending)
  message            String?
  cancellationReason String?
  createdAt          DateTime          @default(now())
  updatedAt          DateTime          @updatedAt
  owner              User              @relation("OwnerAppointments", fields: [ownerId], references: [id], onDelete: Cascade)
  property           Property          @relation(fields: [propertyId], references: [id], onDelete: Cascade)
  student            User              @relation("StudentAppointments", fields: [studentId], references: [id], onDelete: Cascade)

  @@map("appointments")
}

enum UserType {
  student
  owner
  admin
}

enum PropertyType {
  apartment
  house
  studio
}

enum AppointmentStatus {
  pending
  confirmed
  cancelled
  completed
}

enum UserStatus {
  PENDING_VERIFICATION
  PENDING_APPROVAL
  ACTIVE
  SUSPENDED
}
